fix overlay z-index

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ ul#gall > li:target:before{
 	left: 0;
 	right: 0;
 	bottom: 0;
+	z-index: 3;
 	background: rgba(0,0,0,0.2);
 }
 
